Fix changelog iframe collapsing in small windows

--- a/chrome/content/salastread/pref/pref-about.css
+++ b/chrome/content/salastread/pref/pref-about.css
@@ -14,3 +14,7 @@
 	-moz-border-bottom-colors: ThreeDHighlight ThreeDLightShadow;
 	-moz-border-left-colors: ThreeDShadow ThreeDDarkShadow;
 }
+
+#changelogframe {
+	min-height: 14em;
+}
